<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.BoundServiceActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_show_ms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_message"
        android:gravity="center"
         />

    <Button
        android:id="@+id/btn_first_ms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/first_ms_from_service" />

    <Button
        android:id="@+id/btn_second_ms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/second_ms_from_service" />
    <Button
        android:id="@+id/btn_next_intentService"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/move_on_next" />
</LinearLayout>